fixing broken layout in contentdiv

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -77,6 +77,7 @@ margin-top: 1em;
     background: #253A47;
     padding: .5em;
     width: 13em;
+    height: 100vh;
     transition: margin-left 0.3s ease;
     display: flex;
     flex-direction: column;
